tests/errors/unhashable_dict_lookup.py
# expect_error: unhashable type
data = {'a': 1}
print(data[[1]])